Test save data from S3 && Read from SQLite

--- a/.gitignore
+++ b/.gitignore
@@ -266,4 +266,7 @@ $RECYCLE.BIN/
 # Windows shortcuts
 *.lnk
 
+# SQLite
+*.db
+
 # End of https://www.toptal.com/developers/gitignore/api/macos,linux,windows,python,visualstudiocode
